# fluffy-code

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
fluffy_code/: code.py  prebuilt_styles.py  style.py
fluffy_code/static/: global.css
testing/: generate_test_html.py  test.py
testing/samples/: python.py
tests/: code_test.py  conftest.py  prebuilt_styles_test.py  style_test.py
