[tool.poetry]
name = "fluffy-code"
version = "0.0.0"
description = ""
authors = ["Chris Kuehl <ckuehl@ckuehl.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fluffy_code"}]

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "*"
pygments-ansi-color = "*"
pyquery = "*"
MarkupSafe = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
