[tool.poetry]
name = "fluffy-code"
version = "0.0.1"
description = "A developer-friendly code rendering library for Python web applications"
authors = ["Chris Kuehl <ckuehl@ckuehl.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "fluffy_code"}]

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "*"
pygments-ansi-color = "*"
pyquery = "*"
MarkupSafe = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pre-commit = "^2.20.0"
mypy = "^0.971"
types-Pygments = "^2.13.0"
coverage = "^6.4.4"
covdefaults = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
